--- a/main.css
+++ b/main.css
@@ -1,15 +1,19 @@
 body {
-    background-color: aqua;
-  }
-  
-  .pieStyles, 
-  .buttonStyles {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  .btn,
-  .card {
-    margin: 10px;
-  }
+  background-color: aqua;
+}
+
+.pieStyles,
+.buttonStyles {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.btn,
+.card {
+  margin: 10px;
+}
+
+form {
+  margin: 20px;
+}
